--- a/src/dev/index.html
+++ b/src/dev/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>React Boilerplate (development)</title>
+        <link rel="stylesheet" href="/assets/styles/salesforce-lightning-design-system.min.css">
     </head>
     <body>
         <div id="root"></div>
