--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>React Boilerplate</title>
-
+        <link rel="stylesheet" href="/assets/styles/salesforce-lightning-design-system.min.css">
         <link rel="stylesheet" href="/assets/main.css">
     </head>
     <body>
